Deploymenta egiteko buildgradlea aldatu da