@@ -10,7 +10,7 @@ plugins {
     id 'java'
     id 'application'
     id 'org.openjfx.javafxplugin' version '0.0.8'
-    id 'org.beryx.jlink' version '2.21.1'
+    id 'org.beryx.jlink' version '2.22.3'
 
 
 
@@ -39,7 +39,7 @@ mainClassName = "$moduleName/ehu.isad.Main"
 
 javafx {
     version = "12"
-    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.swing', 'javafx.web' ]
+    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.swing', 'javafx.web','javafx.graphics' ]
 }
 
 dependencies {
@@ -56,22 +56,32 @@ dependencies {
 
 
 jlink {
-
+    addExtraDependencies("javafx")
     options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
     launcher {
         name = 'whatwebfx'
 
-        jvmArgs = [
+        jvmArgs = ['--add-exports','java.desktop/com.apple.eawt=ALL-UNNAMED',
                 "--add-opens", "javafx.graphics/javafx.css=de.jensd.fx.fontawesomefx.commons"
         ]
     }
 
     jpackage {
-        if (org.gradle.internal.os.OperatingSystem.current().windows) {
-            installerOptions += ['--win-per-user-install', '--win-dir-chooser', '--win-menu', '--win-shortcut']
+        jpackageHome="/home/ibai/.sdkman/candidates/java/14.0.2.fx-zulu"
+
+        if (javafx.getPlatform().name() == "WINDOWS") {
+            installerType = "exe"
+            jpackageHome = "C:\\Users\\34636\\.jdks\\openjdk-14.0.2"
+            installerOptions = ['--win-menu', '--win-shortcut', '--win-dir-chooser']
+        }
+        else {
+            installerType = "deb"
+            jpackageHome = "/home/ibai/.sdkman/candidates/java/14.0.2.fx-zulu"
         }
     }
 }
+
+
 
 
 repositories {
